log
Thu, Mar 27, 2025  5:23:13 PM: 
 list.c | 6 +++++-
 1 file changed, 5 insertions(+), 1 deletion(-)
 tests:  1|5
total_score: 10/70
25021aa
Thu, Mar 27, 2025  5:34:27 PM: 
 list.c | 4 +++-
 1 file changed, 3 insertions(+), 1 deletion(-)
In file included from test.c:5:0:
list.c: In function 'firstList':
list.c:40:13: error: 'List {aka struct List}' has no member named 'first'
     if (list->first == NULL) return NULL;
             ^~
Compilation failed
69e567f
Thu, Mar 27, 2025  5:34:56 PM: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|5
total_score: 10/70
f7f6aea
Thu, Mar 27, 2025  5:36:04 PM: 
 list.c | 1 -
 1 file changed, 1 deletion(-)
 tests:  1|5
total_score: 10/70
beadbfd
Thu, Mar 27, 2025  5:36:43 PM: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
83a6356
Thu, Mar 27, 2025  5:38:02 PM: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|5
total_score: 10/70
90e283a
Thu, Mar 27, 2025  5:38:23 PM: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|5
total_score: 10/70
49e3c61
